[tool.poetry]
name = "c-vis"
version = "0.1.0"
description = ""
authors = ["ggarver <gmgarver@willamette.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
pyyaml = "^6.0.3"
numpy = "^2.4.2"
torch = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
